--- a/style.css
+++ b/style.css
@@ -11,6 +11,18 @@ a {
   color: gold;
 }
 
+ul {
+  list-style-type: none;
+  display: flex;
+  padding: 20px 20px 5px 20px;
+  justify-content: flex-end;
+  font-family: "Roboto", sans-serif;
+}
+
+#li_two {
+  padding: 0px 20px;
+}
+
 
 h1 {
   font-family: "Pixelify Sans", sans-serif;
